spacing fix

--- a/src/assets/styles/04-components/user-pages.scss
+++ b/src/assets/styles/04-components/user-pages.scss
@@ -91,7 +91,7 @@
 * thank you page 
 */
 .thankyou-block{
-  @apply duration-500 hover:shadow-default flex-1 bg-white p-8  rounded-md mb-6 md:mb-10 flex flex-col items-center justify-center;
+  @apply duration-500 hover:shadow-default flex-1 bg-white p-8 rounded-md mb-6 md:mb-8 flex flex-col items-center justify-center;
 
   &.sent{
     @apply text-green-500 font-bold;
